--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/watermelonsugar/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
             background-color: rgba(8, 7, 7, 0.952);
         }
         .start{
-            background-image: url(/images/background.png);
+            background-image: url(/watermelonsugar/images/background.png);
             background-size: cover;
             border: 0px;
             opacity: 50%;
@@ -173,7 +173,7 @@
         }
         .pg4{
             color: white;
-            background-image: url(/images/harryimage.jpg);
+            background-image: url(/watermelonsugar/images/harryimage.jpg);
             background-size: cover;
             text-align: center;
             position: relative; bottom: 60px;
@@ -218,7 +218,7 @@
 </head>
 <body>
     <div class="start">
-        <a href="#pg1"><img src="/images/outline_expand_more_white_24dp.png" alt=""></a>
+        <a href="#pg1"><img src="/watermelonsugar/images/outline_expand_more_white_24dp.png" alt=""></a>
     </div>
     <p class="starttitle">Watermelon Sugar</p>
     <div class="page1" id="pg1">
@@ -234,15 +234,15 @@
             Length : 2m 53s <br>
             Label: Erskine / Columbia
         </p>
-        <a href="#pg2"><img src="/images/outline_expand_more_black_24dp.png" alt=""></a>
+        <a href="#pg2"><img src="/watermelonsugar/images/outline_expand_more_black_24dp.png" alt=""></a>
     </div>
     <div id="pg2">
         <h1 class="pg2h1">Listen On</h1>
-        <a href="https://open.spotify.com/track/6UelLqGlWMcVH1E5c4H7lY" class="spotify" target="_blank"><img src="/images/spotify.png" alt="" width="200px" ></a>
-        <a href="https://music.apple.com/in/album/watermelon-sugar/1485802965" class="applemusic" target="_blank"><img src="/images/applemusic.png" alt="" width="180px"></a>
+        <a href="https://open.spotify.com/track/6UelLqGlWMcVH1E5c4H7lY" class="spotify" target="_blank"><img src="/watermelonsugar/images/spotify.png" alt="" width="200px" ></a>
+        <a href="https://music.apple.com/in/album/watermelon-sugar/1485802965" class="applemusic" target="_blank"><img src="/watermelonsugar/images/applemusic.png" alt="" width="180px"></a>
         <a href="tidal.com/browse/track/122739765" class="tidal" target="_blank"><img src="/images/tidal.png" alt="" width="150px"></a>
-        <a href="https://www.jiosaavn.com/song/watermelon-sugar/CBIyYDhTBlkl" class="saavn" target="_blank"><img src="/images/saavn.png" alt="" width="220px"></a>
-        <a href="https://deezer.page.link/xdwAHxuPhgiH9Bsx5" class="deezer" target="_blank"><img src="/images/deezer.png" alt="" width="180px"></a>
+        <a href="https://www.jiosaavn.com/song/watermelon-sugar/CBIyYDhTBlkl" class="saavn" target="_blank"><img src="/watermelonsugar/images/saavn.png" alt="" width="220px"></a>
+        <a href="https://deezer.page.link/xdwAHxuPhgiH9Bsx5" class="deezer" target="_blank"><img src="/watermelonsugar/images/deezer.png" alt="" width="180px"></a>
     </div>
     <div class="pg3">
         <h1 class="pg3h1">Music Video</h1>
@@ -254,9 +254,9 @@
         <p>Harry Edward Styles is an English singer, songwriter, actor, model, and <br> businessman. His musical career began in 2010 as a solo contestant on the British music <br> competition series The X Factor. Following his elimination early on, he was brought back to join <br> the boy band One Direction, which went on to become one of the best-selling boy bands of all time. <br>
             Styles released his self-titled debut solo album through Columbia Records in 2017. It debuted <br>at number one in the UK and the US, and became one of the world's top-ten best-selling <br>albums of the year. Its lead single, "Sign of the Times", topped the UK Singles Chart. <br>Styles made his acting debut in Christopher Nolan's 2017 war film Dunkirk. His second <br>album, Fine Line (2019), debuted atop the US Billboard 200 with the biggest first-week <br>sales by an English male artist in history, and was listed among Rolling Stone's "500 <br>Greatest Albums of All Time" in 2020. Its fourth single, "Watermelon Sugar", topped the US<br> Billboard Hot 100.
             Throughout his career, Styles has earned several accolades, including two Brit Awards, a Grammy <br>Award, an Ivor Novello Award, and an American Music Award. Aside from music, he is also <br>known for his flamboyant fashion, and is the first man to appear solo on the cover of Vogue magazine.</p>
-            <a href="https://www.instagram.com/harrystyles/" class="instagram" target="_blank"><img src="/images/instagram.png" alt="" width="45px"></a>
-            <a href="https://www.facebook.com/harrystyles" class="facebook" target="_blank"><img src="/images/facebook.png" alt="" width="50px"></a>
-            <a href="https://twitter.com/Harry_Styles" class="twitter" target="_blank"><img src="/images/twitter.png" alt="" width="50px"></a>
+            <a href="https://www.instagram.com/harrystyles/" class="instagram" target="_blank"><img src="/watermelonsugar/images/instagram.png" alt="" width="45px"></a>
+            <a href="https://www.facebook.com/harrystyles" class="facebook" target="_blank"><img src="/watermelonsugar/images/facebook.png" alt="" width="50px"></a>
+            <a href="https://twitter.com/Harry_Styles" class="twitter" target="_blank"><img src="/watermelonsugar/images/twitter.png" alt="" width="50px"></a>
     </div>
     <footer>&#169; 2022, Watermelon Sugar</footer>
 </body>
