--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <h1 class="pg2h1">Listen On</h1>
         <a href="https://open.spotify.com/track/6UelLqGlWMcVH1E5c4H7lY" class="spotify" target="_blank"><img src="/watermelonsugar/images/spotify.png" alt="" width="200px" ></a>
         <a href="https://music.apple.com/in/album/watermelon-sugar/1485802965" class="applemusic" target="_blank"><img src="/watermelonsugar/images/applemusic.png" alt="" width="180px"></a>
-        <a href="tidal.com/browse/track/122739765" class="tidal" target="_blank"><img src="/images/tidal.png" alt="" width="150px"></a>
+        <a href="tidal.com/browse/track/122739765" class="tidal" target="_blank"><img src="/watermelonsugar/images/tidal.png" alt="" width="150px"></a>
         <a href="https://www.jiosaavn.com/song/watermelon-sugar/CBIyYDhTBlkl" class="saavn" target="_blank"><img src="/watermelonsugar/images/saavn.png" alt="" width="220px"></a>
         <a href="https://deezer.page.link/xdwAHxuPhgiH9Bsx5" class="deezer" target="_blank"><img src="/watermelonsugar/images/deezer.png" alt="" width="180px"></a>
     </div>
