--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/watermelonsugar/main.css">
     <link rel="shortcut icon" href="/watermelonsugar/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,205 +17,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <title>Watermelon Sugar</title>
-    <style>
-        ::selection{
-            background-color: rgba(152,146,255,0.4);
-        }
-        @media screen {
-            .start{
-                background-attachment: scroll;
-            }
-            .page1{
-                background-attachment: scroll;
-            }
-        }
-        @keyframes arrow1 {
-            from{
-                top: 540px;
-            }
-            to {
-                bottom: 10px;
-            }
-            
-        }
-        @keyframes arrow2 {
-            from{
-                bottom: -50px;
-            }
-            to {
-                bottom: -60px;
-            }
-        }
-        body{
-            background-color: rgba(8, 7, 7, 0.952);
-        }
-        .start{
-            background-image: url(/watermelonsugar/images/background.png);
-            background-size: cover;
-            border: 0px;
-            opacity: 50%;
-            margin: 0px;
-            padding-bottom: 600px;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            animation-name: fadeInUp;
-            animation-duration: 3s;
-        }
-        .starttitle{
-            color: white;
-            font-family: Pacifico;
-            font-size: 50px;
-            position: relative; bottom: 450px; left: 420px;
-            background: rgb(152,146,255);
-            background: linear-gradient(90deg, rgba(152,146,255,0.4) 4%, rgba(255,38,93,0.4) 100%);    
-            max-width: 410px;
-            padding: 20px;  
-        }
-        .start>a{
-            width: 50px;
-            max-width: 100px;
-            max-height: 50px;
-            position: relative; top: 550px; left: 640px;
-            animation-name: arrow1;
-            animation-duration: 1s;
-            animation-iteration-count: infinite;
-        }
-        .page1>a{
-            width: 50px;
-            max-width: 100px;
-            max-height: 50px;
-            position: relative; bottom: -70px;
-            animation-name: arrow2;
-            animation-duration: 1s;
-            animation-iteration-count: infinite;
-        }
-        h1{
-            font-family: Pacifico;
-            padding: 10px;
-            font-weight: 50;
-            font-size: 50px;
-        }
-        .pg1head{
-            padding-top: 40px;
-        }
-        .page1{
-            background-color: white;
-            position: relative; bottom: 220px;
-            text-align: center;
-            padding-bottom: 110px;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        .about{
-            font-family: 'Dancing Script', cursive;
-            font-size: 27px;
-            font-weight: 500;
-
-        }
-        #pg2{
-            color: white;
-            background-color: rgb(8, 7, 7,);
-            position: relative; bottom: 250px;
-            text-align: center;
-            padding-bottom: 140px;
-        }
-        .pg2h1{
-            padding-top: 40px;
-        }
-        .spotify{
-            position: relative; left: 220px; bottom: 10px;
-            padding: 15px;
-            padding-top: 55px;
-            border-radius: 10px;
-        }
-        .applemusic{
-            position: relative; top: 100px;
-            padding: 15px;
-            padding-top: 35px;
-            border-radius: 10px;
-        }
-        .tidal{
-            position: relative; top: 250px; 
-            padding: 15px;
-            padding-top: 70px;
-            border-radius: 10px;
-        }
-        .saavn{
-            position: relative; bottom: 5px;
-            padding-bottom: 0px;
-            padding-top: 65px;
-            border-radius: 10px;
-        }
-        .deezer{
-            position: relative; top: 100px; right: 220px;
-            padding: 15px;
-            padding-top: 55px;
-            border-radius: 10px;
-        }
-        #pg2>a:hover{
-            background: rgb(152,146,255);
-            background: linear-gradient(90deg, rgba(152,146,255,0.4) 4%, rgba(255,38,93,0.4) 100%);
-        }
-        a:hover{
-            transition: all 0.2s;
-        }
-        .pg3{
-            background-color: white;
-            position: relative; bottom: 30px;
-            text-align: center;
-            padding-bottom: 65px;
-        }
-        .pg3h1{
-            padding-top: 40px;
-        }
-        .pg4{
-            color: white;
-            background-image: url(/watermelonsugar/images/harryimage.jpg);
-            background-size: cover;
-            text-align: center;
-            position: relative; bottom: 60px;
-            padding-bottom: 120px;
-        }
-        .pg4>h1{
-            padding-top: 40px;
-        }
-        .pg4>p{
-            font-size: 20px;
-            font-family: 'Quicksand', sans-serif;
-        }
-        .instagram{
-            padding: 20px;
-            padding-top: 50px;
-            border-radius: 10px;
-            position: relative; bottom: -40px; left: -40px;
-        }
-        .facebook{            
-            padding: 20px;
-            padding-top: 50px;
-            border-radius: 10px;
-            position: relative; bottom: -40px; left: 10px;
-        }
-        .twitter{
-            padding: 20px;
-            padding-top: 50px;
-            border-radius: 10px;
-            position: relative; bottom: -40px; left: 60px;
-        }
-        .pg4>a:hover{
-            background-color: gray;
-        }
-        footer{
-            position: relative; bottom: 60px;
-            background-color: white;
-            padding: 30px;
-            font-size: 20px;
-            font-family: 'Quicksand', sans-serif;
-        }
-    </style>
 </head>
 <body>
     <div class="start">
